@@ -858,6 +858,7 @@
 		<Unit filename="COgreMeshFileLoader.h" />
 		<Unit filename="COpenGLCgMaterialRenderer.cpp" />
 		<Unit filename="COpenGLCgMaterialRenderer.h" />
+		<Unit filename="COpenGLCommon.h" />
 		<Unit filename="COpenGLDriver.cpp" />
 		<Unit filename="COpenGLDriver.h" />
 		<Unit filename="COpenGLExtensionHandler.cpp" />
@@ -1326,10 +1327,6 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="zlib/zutil.h" />
-		<Extensions>
-			<code_completion />
-			<debugger />
-			<envvars />
-		</Extensions>
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
